tests/baselines/reference/nodeModulesTripleSlashReferenceModeDeclarationEmit2(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
/index.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.
/index.ts(2,41): error TS2304: Cannot find name 'ImportInterface'.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== /index.ts (2 errors) ====
    /// <reference types="pkg" preserve="true" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    export interface LocalInterface extends ImportInterface {}
                                            ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ImportInterface'.
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        interface ImportInterface {}
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        interface RequireInterface {}
    }
==== /package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }